bug 162242. patch by prognathous@hotmail.com r=smontagu sr=dbaron BiDi: Text input is auto switching between Arabic/Hebrew and English